Styled carousel buttons

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,57 @@
   src: local('Arenq'), url(./fonts/Arenq.otf) format('opentype');
 }
 
+// Bootstrap styles 
+
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.btn-lg {
+  padding: .6rem 1rem;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  margin: 0.5rem 0;
+}
+
+.btn-dark {
+  color: #f8f9fa;
+  background-color: transparent;
+  text-shadow: 0 0 1rem rgba(255, 255, 255, 1), 0 0 2rem rgba(234, 234, 234, 0.3);
+  background-image: none;
+    &:hover {
+    color: #fff;
+    background-color: #090909;
+    text-shadow: 0 0 1rem rgba(255, 255, 255, 1), 0 0 2rem rgba(234, 234, 234, 0.8), 0 0 3rem rgba(200, 200, 200, 0.6);
+    border-color: #121212;
+  }
+}
+
+.btn-outline-light {
+  color: #f8f9fa;
+  background-color: transparent;
+  background-image: none;
+  &:hover {
+    color: #212529;
+    background-color: rgba(248, 249, 250, 0.9);
+    border-color: rgba(248, 249, 250, 0.2);
+  }
+}
+
 /*  ---===HEADER===--- Nav component + Logo (SYRA)  */
 
 .App {
