--- a/src/carousel.scss
+++ b/src/carousel.scss
@@ -1,43 +1,61 @@
 .gallery {
   width: 100%;
+  overflow-x: hidden;
 }
 
 .gallery-container {
-  align-items: center;
   display: flex;
-  height: 600px;
+  height: 40rem;
   margin: 0 auto;
   max-width: 1500px;
   position: relative;
+  align-items: center;
+  justify-content: center;
+}
+
+.gallery-slide {
+  width: 0;
+  height: 31rem;
+  transition: all 0.3s ease-in-out;
+  display: flex;
+  align-items: center;
+  background-color: black;
+  // padding: 1.2rem;
+  text-align: center;
+  &.gallery-slide-selected {
+    width: 23.25rem;
+    cursor: pointer;
+    display: block;
+  }
 }
 
 .gallery-item {
-  height: 300px;
+  object-fit: contain;
+  height: 19rem;
+  width: 14.25rem;
   opacity: .4;
   position: absolute;
   transition: all 0.3s ease-in-out;
-  width: auto;
   z-index: 0;
-  object-fit: contain;
   background-color: black;
 }
 
 .gallery-item.gallery-item-selected {
-  box-shadow: 0 0 30px rgba(255, 255, 255, 0.25), 0 0 60px rgba(255, 255, 255, 0.20), 0 0 110px rgba(255, 255, 255, 0.15);
+  box-shadow: 0 0 1.8rem rgba(255, 255, 255, 0.25), 0 0 2.7rem rgba(255, 255, 255, 0.20), 0 0 4rem rgba(255, 255, 255, 0.15);
   border-radius: 5px;
-  height: 500px;
+  height: 31rem;
   opacity: 1;
   left: 50%;
   transform: translateX(-50%);
-  width: 400px;
+  width: 23.25rem;
   z-index: 2;
 }
 
 .gallery-item.gallery-item-previous,
 .gallery-item.gallery-item-next {
-  height: 400px;
+  height: 25rem;
   opacity: 1;
-  width: auto;
+  width: 18.75rem;
   z-index: 1;
 }
 
@@ -65,6 +83,19 @@
   visibility: hidden; 
 }
 
+.gallery-item-text {
+  position: relative;
+  visibility: hidden;
+
+  &.selected-text {
+    visibility: visible;
+    height: 100%;
+    width: 100%;
+    z-index: 2;
+    text-shadow: 0 0 0.8rem rgba(255, 255, 255, 1), 0 0 1.6rem rgba(0, 0, 0, 0.8);
+  }
+}
+
 .gallery-controls {
   display: flex;
   justify-content: center;
@@ -74,7 +105,7 @@
 .gallery-controls button {
   cursor: pointer;
   text-transform: capitalize;
-  min-width: 200px;
+  min-width: 12rem;
   font-weight: 900;
 }
 
@@ -148,4 +179,10 @@
 
 .gallery-nav li.gallery-item-selected {
   background: #ccc;
+}
+
+@media (max-width: 500px) {
+  .gallery-item.gallery-item-first, .gallery-item.gallery-item-last {
+    visibility: hidden;
+  }
 }
