--- a/src/carousel.scss
+++ b/src/carousel.scss
@@ -92,7 +92,7 @@
     height: 100%;
     width: 100%;
     z-index: 2;
-    text-shadow: 0 0 0.8rem rgba(255, 255, 255, 1), 0 0 1.6rem rgba(0, 0, 0, 0.8);
+    text-shadow: 0 0 0.4rem rgba(255, 255, 255, 1), 0 0 1rem rgba(255, 255, 255, 0.9), 0 0 1.5rem rgba(0, 0, 0, 1);
   }
 }
 
