--- a/src/carousel.scss
+++ b/src/carousel.scss
@@ -1,3 +1,7 @@
+.hidden {
+  visibility: hidden; 
+}
+
 .gallery {
   width: 100%;
   overflow-x: hidden;
@@ -13,85 +17,53 @@
   justify-content: center;
 }
 
-.gallery-slide {
-  width: 0;
-  height: 31rem;
-  transition: all 0.3s ease-in-out;
-  display: flex;
-  align-items: center;
-  background-color: black;
-  // padding: 1.2rem;
-  text-align: center;
-  &.gallery-slide-selected {
-    width: 23.25rem;
-    cursor: pointer;
-    display: block;
-  }
-}
-
 .gallery-item {
-  object-fit: contain;
+  // object-fit: contain;
+  pointer-events: none;
+  cursor: default;
+  display: block;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
   height: 19rem;
   width: 14.25rem;
-  opacity: .4;
+  opacity: 0.4;
   position: absolute;
-  transition: all 0.3s ease-in-out;
-  z-index: 0;
-  background-color: black;
-}
-
-.gallery-item.gallery-item-selected {
-  box-shadow: 0 0 1.8rem rgba(255, 255, 255, 0.25), 0 0 2.7rem rgba(255, 255, 255, 0.20), 0 0 4rem rgba(255, 255, 255, 0.15);
-  border-radius: 5px;
-  height: 31rem;
-  opacity: 1;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 23.25rem;
-  z-index: 2;
-}
-
-.gallery-item.gallery-item-previous,
-.gallery-item.gallery-item-next {
-  height: 25rem;
-  opacity: 1;
-  width: 18.75rem;
+  transition: all 0.6s ease-in-out;
   z-index: 1;
-}
+  text-align: center;
 
-.gallery-item.gallery-item-previous {
-  left: 25%;
-  transform: translateX(-50%);
-}
+  transform: 
+    translateX(calc(85% * var(--offset)));
 
-.gallery-item.gallery-item-next {
-  left: 75%;
-  transform: translateX(-50%);
-}
+  &.gallery-item-selected {
+    background-color: black;
+    cursor: pointer;
+    pointer-events: auto;
+    box-shadow: 0 0 1.8rem rgba(255, 255, 255, 0.25), 0 0 2.7rem rgba(255, 255, 255, 0.20), 0 0 4rem rgba(255, 255, 255, 0.15);
+    border-radius: 5px;
+    opacity: 1;
+    height: 31rem;
+    width: 23.25rem;
+    z-index: 3;
+  }
 
-.gallery-item.gallery-item-first {
-  left: 10%;
-  transform: translateX(-50%);
-}
-
-.gallery-item.gallery-item-last {
-  left: 90%;
-  transform: translateX(-50%);
-}
-
-.gallery-item.hidden {
-  visibility: hidden; 
+  &.gallery-item-previous, &.gallery-item-next {
+    height: 25rem;
+    opacity: 0.9;
+    width: 18.75rem;
+    z-index: 2;
+  }
 }
 
 .gallery-item-text {
   position: relative;
-  visibility: hidden;
-
+  opacity: 0;
+  text-shadow: 0;
+  transition: opacity 0.3s ease-in-out;
   &.selected-text {
-    visibility: visible;
-    height: 100%;
-    width: 100%;
-    z-index: 2;
+    opacity: 1;
+    z-index: 3;
     text-shadow: 0 0 0.4rem rgba(255, 255, 255, 1), 0 0 1rem rgba(255, 255, 255, 0.9), 0 0 1.5rem rgba(0, 0, 0, 1);
   }
 }
