--- a/src/App.scss
+++ b/src/App.scss
@@ -155,13 +155,14 @@ h3 {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  flex-grow: 1;
   width: 100%;
   div:not([class]) {
     position: absolute;
     height: 100%;
     width: 80%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     overflow: auto;
@@ -216,7 +217,7 @@ h3 {
 
 .Releases-header {
   width: 100%;
-  & h1 {
+  h1 {
     font-size: 3rem;
     text-shadow: 0 0 0.5rem rgba(255, 255, 255, 1), 0 0 1.2rem rgba(255, 255, 255, 0.5) ;
   }
@@ -226,7 +227,6 @@ h3 {
   position: relative;
   width: 48vw;
   padding-bottom: 27vw;
-  min-width: 480px;
 }
 
 #Releases-video {
@@ -257,9 +257,9 @@ h3 {
 // Shows Page
 
 .Shows-container {
-  margin: 5rem;
-  height: 35rem;
-  width: 55vw;
+  margin: 5rem 2rem;
+  flex-grow: 1;
+  width: 60%;
   position: relative;
   display: flex;
   justify-content: flex-start;
@@ -284,16 +284,16 @@ h3 {
     color: #fff;
     text-align: center;
     align-self: center;
-    margin: 2rem;
+    margin: 2rem 0;
     &::after {
       font-family: "Arenq", sans-serif;
-      line-height: 0.3;
+      line-height: 0.8;
       font-size: 1.5rem;
       font-weight: bold;
       content: "S";
       display: inline-block;
       position: relative;
-      top: -0.4rem;
+      top: -0.8rem;
       padding: 0 0.75rem;
       background: #191919;
     }
@@ -303,9 +303,7 @@ h3 {
     margin: 0 2rem;
     line-height: 2.5;
     h3 {
-      // text-align: left;
       font-family: serif;
-      font-size: 1.2rem;
       text-transform: none;
       font-variant: normal;
     }
@@ -389,17 +387,32 @@ a.Social-link:hover {
     font-size: 12px;
   } 
 
-  .App-main, .App-header, .App-footer {
+.App-main {
+  div:not([class]) {
+      width: 95%;
+    }  
+  }
+
+  .App-header, .App-footer {
     width: 95%;
   }
 
   .Releases-body {
     width: 72vw;
-    padding-bottom: 54vw;
+    padding-bottom: 40.5vw;
+  }
+
+  .Shows-container {
+    width: 75%;
+  }
+  
+  .btn-lg {
+    padding: 0.5rem 1rem;
+    margin: 0;
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 720px) {
   html {
     font-size: 8px;
   }
@@ -413,14 +426,14 @@ a.Social-link:hover {
   }
 
   .App-header {
-    margin-top: 16rem;
+    margin-top: 14rem;
     justify-content: center;
   }
 
   .Nav-bar {
     justify-content: center;
     width: 50%;
-    height: 8rem;
+    height: 5rem;
   }
 
   .Nav-link li {
@@ -429,15 +442,46 @@ a.Social-link:hover {
   }
 
   .App-logo {
-    font-size: 14rem;
+    font-size: 12rem;
   }
 
-  .App-main, .App-header, .App-footer {
+  .App-header, .App-footer {
     width: 100%;
+  }
+
+  .App-main {
+    div:not([class]) {
+        width: 100%;
+    }  
   }
 
   .Releases-body {
     width: 88vw;
-    padding-bottom: 66vw;
+    padding-bottom: 47.25vw;
+  }
+
+  .Shows-list {
+    h3 {
+      font-size: 1.8rem;
+    }
+    p {
+      font-size: 1.5rem;
+    }
+  }
+}
+
+@media (max-width: 512px) {
+  .Releases-header {
+    h1 {
+      overflow-wrap: normal;
+
+    }
+  }
+  .Releases-body {
+    width: 100vw;
+    padding-bottom: 56.25vw;
+  }
+  .Shows-container {
+    width: 90%;
   }
 }
