--- a/src/carousel.scss
+++ b/src/carousel.scss
@@ -70,7 +70,7 @@
 .gallery-controls {
   display: flex;
   justify-content: center;
-  margin: 30px 0;
+  margin: 28px 0 1rem;
 }
 
 .gallery-controls button {
@@ -153,7 +153,7 @@
   background: #ccc;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 512px) {
   .gallery-item.gallery-item-first, .gallery-item.gallery-item-last {
     visibility: hidden;
   }
