--- a/src/App.scss
+++ b/src/App.scss
@@ -175,30 +175,28 @@ h3 {
   }
 }
 
-//Home component
-
-.Home-background {
-  position: absolute !important;
-  display: flex;
-  justify-content: flex-end;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  right: 0;
-  overflow: hidden;
-  & img {
-    opacity: 0.7;
-    height: 24vw;
-    width: 18vw;
-    position: relative;
-    object-fit: contain;
-    top: 18%;
-    left: -8%;
-  }
-  // background-size: contain;
-  // background-position: center center;
-  // background-repeat: no-repeat;
-}
+// .Component-background {
+//   position: absolute !important;
+//   display: flex;
+//   justify-content: flex-end;
+//   width: 100%;
+//   height: 100%;
+//   top: 0;
+//   right: 0;
+//   overflow: hidden;
+//   & img {
+//     opacity: 0.7;
+//     height: 24vw;
+//     width: 18vw;
+//     position: relative;
+//     object-fit: contain;
+//     top: 18%;
+//     left: -8%;
+//   }
+//   // background-size: contain;
+//   // background-position: center center;
+//   // background-repeat: no-repeat;
+// }
 
 /*    ---===Releases Page===---                          */
 
