--- a/src/App.scss
+++ b/src/App.scss
@@ -168,6 +168,7 @@ h3 {
     overflow: auto;
     transition: opacity 0.2s linear;
     -ms-overflow-style: none;
+    scrollbar-width: none;
 
     &::-webkit-scrollbar {
       display: none;
@@ -209,8 +210,8 @@ h3 {
   text-align: center;
 }
 
-.Releases-header, .Releases-body, .Releases-footer {
-  margin-top: 2%;
+.Releases-body, .Releases-footer {
+  margin-top: 2vh;
 }
 
 .Releases-header {
@@ -266,8 +267,16 @@ h3 {
 
 // Shows Page
 
+.container-shadow {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
+  box-shadow: inset 0 0 3rem rgba(0, 0, 0, 1), 0 0 2rem rgba(255,255,255,0.35);
+}
+
 .Shows-container {
   margin: 5rem 2rem;
+  max-height: 60vh;
   flex-grow: 1;
   width: 60%;
   position: relative;
@@ -275,10 +284,6 @@ h3 {
   justify-content: flex-start;
   flex-direction: column;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  border-radius: 5px;
-  box-shadow: inset 0 0 3rem rgba(0, 0, 0, 1), 0 0 2rem rgba(255,255,255,0.35);
 
   h1 {
     font-size: 3rem;
@@ -348,8 +353,6 @@ h3 {
 .LinkTree-item {
   padding: 1.5rem;
   margin: 1rem 0;
-  border: 1px solid rgba(200,200,200, 0.5);
-  box-shadow: 2px 2px 15px rgba(200,200,200, 0.5);
   position: relative;
   cursor: pointer;
 }
@@ -379,11 +382,11 @@ h3 {
 
 a.Social-link {
   transition: transform 300ms;
-  width: 25px;
-  height: 25px;
-  vertical-align: flex-start;
-  font-size: 25px;
-  line-height: 25px;
+  text-align: center;
+  width: 1.7rem;
+  height: 1.7rem;
+  font-size: 1.7rem;
+  line-height: 1.7rem;
   color: black;
 }
 
@@ -399,7 +402,30 @@ a.Social-link:hover {
     filter: drop-shadow(0 0 0.4rem rgba(255,255,255, 0.6));
 }
 
-@media (max-width: 1024px) {
+@media (orientation: landscape) {
+  .Releases-body {
+    width: 0;
+    padding-bottom: 0;
+    height: 40.5vh;
+    padding-right: 72vh;
+  }
+}
+
+@media (min-width: 2000px) {
+  html {
+    font-size: 20px;
+  }
+
+}
+
+@media (max-width: 1440px) {
+  @media (orientation: portrait) {
+    .Releases-body {
+      width: 72vw;
+      padding-bottom: 40.5vw;
+    }
+  }
+
   html {
     font-size: 12px;
   } 
@@ -411,12 +437,7 @@ a.Social-link:hover {
   }
 
   .App-header, .App-footer {
-    width: 95%;
-  }
-
-  .Releases-body {
-    width: 72vw;
-    padding-bottom: 40.5vw;
+    width: 100%;
   }
 
   .Shows-container {
@@ -426,6 +447,13 @@ a.Social-link:hover {
   .btn-lg {
     padding: 0.5rem 1rem;
     margin: 0;
+  }
+
+  a.Social-link {
+    width: 2rem;
+    height: 2rem;
+    font-size: 2rem;
+    line-height: 2rem;
   }
 }
 
@@ -460,10 +488,6 @@ a.Social-link:hover {
 
   .App-logo {
     font-size: 12rem;
-  }
-
-  .App-header, .App-footer {
-    width: 100%;
   }
 
   .App-main {
@@ -501,4 +525,14 @@ a.Social-link:hover {
   .Shows-container {
     width: 90%;
   }
+  a.Social-link {
+    width: 3rem;
+    height: 3rem;
+    font-size: 3rem;
+    line-height: 3rem;
+  }
 }
+
+
+
+
