--- a/src/carousel.scss
+++ b/src/carousel.scss
@@ -9,7 +9,7 @@
 
 .gallery-container {
   display: flex;
-  height: 40rem;
+  height: 36rem;
   margin: 0 auto;
   max-width: 1500px;
   position: relative;
@@ -70,7 +70,7 @@
 .gallery-controls {
   display: flex;
   justify-content: center;
-  margin: 28px 0 1rem;
+  margin-top: 25px;
 }
 
 .gallery-controls button {
@@ -156,5 +156,15 @@
 @media (max-width: 512px) {
   .gallery-item.gallery-item-first, .gallery-item.gallery-item-last {
     visibility: hidden;
+  }
+}
+
+@media (min-width: 2000px) {
+  .gallery-nav li {
+    border-radius: 50%;
+    height: 0.9rem;
+    margin: 0 1.5rem;
+    width: 0.9rem;
+    cursor: pointer;
   }
 }
