--- a/src/carousel.scss
+++ b/src/carousel.scss
@@ -9,8 +9,8 @@
 
 .gallery-container {
   display: flex;
-  height: 36rem;
-  margin: 0 auto;
+  height: 32rem;
+  margin: 0 auto 1rem;
   max-width: 1500px;
   position: relative;
   align-items: center;
@@ -19,17 +19,16 @@
   a {
     pointer-events: none;
     cursor: default;
-    display: block;
-    background-size: contain;
+    display: flex;
+    flex-direction: column;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    height: 19rem;
-    width: 14.25rem;
-    opacity: 0.4;
     position: absolute;
-    transition: all 0.6s ease-in-out;
-    z-index: 1;
+    transition: 0.6s ease-in-out;
     text-align: center;
+    justify-content: flex-end;
+    box-shadow: inset 0 0 1.5rem rgba(0, 0, 0, 1);
 
     transform: 
       translateX(calc(85% * var(--offset)));
@@ -38,34 +37,59 @@
       background-color: black;
       cursor: pointer;
       pointer-events: auto;
-      box-shadow: 0 0 1.8rem rgba(255, 255, 255, 0.25), 0 0 2.7rem rgba(255, 255, 255, 0.20), 0 0 4rem rgba(255, 255, 255, 0.15);
+      box-shadow: inset 0 0 2.2rem rgba(0, 0, 0, 0.85), 0 0 1.8rem rgba(255, 255, 255, 0.25), 0 0 2.7rem rgba(255, 255, 255, 0.20), 0 0 3.4rem rgba(255, 255, 255, 0.1);
       border-radius: 5px;
       opacity: 1;
-      height: 31rem;
-      width: 23.25rem;
+      height: 25rem;
+      width: 25rem;
       z-index: 4;
     }
 
+    &.gallery-item-first, &.gallery-item-last {
+      height: 14rem;
+      width: 14rem;
+      opacity: 0.4;
+      z-index: 1;
+    }
+
     &.gallery-item-previous, &.gallery-item-next {
-      height: 25rem;
+      height: 18rem;
       opacity: 0.9;
-      width: 18.75rem;
+      width: 18rem;
       z-index: 2;
     }
   }
 }
 
-.gallery-item-text {
+.gallery-item-title, .gallery-item-subtitle {
   position: relative;
   opacity: 0;
-  text-shadow: 0;
-  transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out, font-size 0.4s ease-in 0.2s;
+  height: 2.3rem;
+  line-height: 2.3rem;
+
   &.selected-text {
     opacity: 1;
-    z-index: 5;
-    text-shadow: 0 0 0.4rem rgba(255, 255, 255, 1), 0 0 1rem rgba(255, 255, 255, 0.9), 0 0 1.5rem rgba(0, 0, 0, 1);
+    z-index: 4;
   }
 }
+
+.gallery-item-title {
+  font-size: 0;
+  &.selected-text {
+    font-size: 1.7rem;
+    text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.7), 2px 2px 1px rgba(0, 0, 0, 1), 1px 1px 4px rgba(255, 255, 255, 1), 1px 1px 6px rgba(255, 255, 255, 0.7);
+  }
+}
+
+.gallery-item-subtitle {
+  font-size: 0;
+  &.selected-text {
+    font-size: 1.3rem;
+    text-shadow: 2px 2px 1px rgba(0, 0, 0, 1), 1px 1px 4px rgba(255, 255, 255, 1), 1px 1px 6px rgba(255, 255, 255, 0.7);
+  }
+}
+
 
 .gallery-controls {
   display: flex;
