--- a/src/carousel.scss
+++ b/src/carousel.scss
@@ -23,7 +23,7 @@
     flex-direction: column;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: center 25%;
     position: absolute;
     transition: 0.6s ease-in-out;
     text-align: center;
@@ -38,7 +38,6 @@
       cursor: pointer;
       pointer-events: auto;
       box-shadow: inset 0 0 2.2rem rgba(0, 0, 0, 0.85), 0 0 1.8rem rgba(255, 255, 255, 0.25), 0 0 2.7rem rgba(255, 255, 255, 0.20), 0 0 3.4rem rgba(255, 255, 255, 0.1);
-      border-radius: 5px;
       opacity: 1;
       height: 25rem;
       width: 25rem;
@@ -75,17 +74,17 @@
 }
 
 .gallery-item-title {
-  font-size: 0;
+  // font-size: 0;
+    font-size: 2rem;
   &.selected-text {
-    font-size: 1.7rem;
     text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.7), 2px 2px 1px rgba(0, 0, 0, 1), 1px 1px 4px rgba(255, 255, 255, 1), 1px 1px 6px rgba(255, 255, 255, 0.7);
   }
 }
 
 .gallery-item-subtitle {
-  font-size: 0;
+  // font-size: 0;
+    font-size: 1.2rem;
   &.selected-text {
-    font-size: 1.3rem;
     text-shadow: 2px 2px 1px rgba(0, 0, 0, 1), 1px 1px 4px rgba(255, 255, 255, 1), 1px 1px 6px rgba(255, 255, 255, 0.7);
   }
 }
