--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,8 @@ dd {
 
 /* Set core body defaults */
 body {
-  min-height: 100vh;
+  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
