--- a/src/App.scss
+++ b/src/App.scss
@@ -367,12 +367,12 @@ h3 {
 }
 
 .LinkTree-item {
-  padding: 1.5rem;
-  margin: 1rem 0;
+  padding: 1rem;
+  margin: 0.5rem 0;
   position: relative;
   cursor: pointer;
   color: #EAEAEA;
-  box-shadow: inset 0 0 2rem rgba(0, 0, 0, 1), 0 0 1.5rem rgba(255,255,255,0.35);
+  box-shadow: inset 0 0 1rem rgba(0, 0, 0, 1), 0 0 0.5rem rgba(255,255,255,0.35);
   font-family: "Times New Roman", serif;
 }
 
@@ -419,7 +419,11 @@ a.Social-link:hover {
 }
 
 .youtube .icon-shadow {
-    filter: drop-shadow(0 0 0.4rem rgba(255,255,255, 0.6));
+    filter: drop-shadow(0 0 0.4rem rgba(255,255,255, 0.7));
+}
+
+.spotify .icon-shadow {
+    filter: drop-shadow(0 0 0.4rem rgba(255,255,255, 0.8));
 }
 
 @media (orientation: landscape) {
