--- a/src/App.scss
+++ b/src/App.scss
@@ -203,31 +203,43 @@ h3 {
 /*    ---===Releases Page===---                          */
 
 .Releases-container {
+  position: absolute;
+  top: 0;
+  height: 100%;
   width: 100%;
   display: flex;
   align-items: center;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
   text-align: center;
+  justify-content: space-between;
 }
 
-.Releases-body, .Releases-footer {
-  margin-top: 2vh;
-  margin-top: calc(var(--vh, 1vh) * 2);
+.Releases-card {
+  display: inline-flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.Releases-body
+// , .Releases-footer 
+{
+  margin: 2.5vh 0;
+  margin: calc(var(--vh, 1vh) * 2.5) 0;
 }
 
 .Releases-header {
   width: 100%;
   h1 {
-    font-size: 3rem;
+    font-size: 2.6rem;
     text-shadow: 0 0 0.5rem rgba(255, 255, 255, 1), 0 0 1.2rem rgba(255, 255, 255, 0.5);
   }
 }
 
 .Releases-body {
   position: relative;
-  width: 48vw;
-  padding-bottom: 27vw;
+  width: 32vw;
+  padding-bottom: 18vw;
 }
 
 #Releases-video {
@@ -236,18 +248,6 @@ h3 {
   left: 0;
   height: 100%;
   width: 100%;
-}
-
-.Releases-coming-soon {
-  position: absolute !important;
-  background-color: #191919 !important;
-  top: 0;
-  left: 0;
-  height: 100% !important;
-  width: 100% !important;
-  z-index: 1;
-  margin: 0 !important;
-  justify-content: center !important;
 }
 
 .Releases-footer {
@@ -430,10 +430,10 @@ a.Social-link:hover {
   .Releases-body {
     width: 0;
     padding-bottom: 0;
-    height: 40.5vh;
-    height: calc(var(--vh, 1vh) * 40.5);
-    padding-right: 72vh;
-    padding-right: calc(var(--vh, 1vh) * 72);
+    height: 27vh;
+    height: calc(var(--vh, 1vh) * 27);
+    padding-right: 48vh;
+    padding-right: calc(var(--vh, 1vh) * 48);
   }
 }
 
@@ -447,8 +447,8 @@ a.Social-link:hover {
 @media (max-width: 1440px) {
   @media (orientation: portrait) {
     .Releases-body {
-      width: 72vw;
-      padding-bottom: 40.5vw;
+      width: 48vw;
+      padding-bottom: 27vw;
     }
   }
 
@@ -531,8 +531,8 @@ a.Social-link:hover {
   }
 
   .Releases-body {
-    width: 88vw;
-    padding-bottom: 47.25vw;
+    width: 64vw;
+    padding-bottom: 36vw;
   }
 
   .Shows-list {
@@ -549,11 +549,20 @@ a.Social-link:hover {
 }
 
 @media (max-width: 512px) {
+  // .Releases-container {
+  //   display: block;
+  //   position: relative;
+  //   top: 3rem;
+  // }
   .Releases-header {
     h1 {
       overflow-wrap: normal;
 
     }
+  }
+  .Releases-body, .Releases-footer {
+    margin: 1vh 0;
+
   }
   .Releases-body {
     width: 100vw;
